# tiktok-uploader

./: .gitignore  .ruff-toml  CLAUDE.md  Fancy_Upload.py  GEMINI.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.md  README.zh-Hans.md  main.py  pyproject.toml  ruff.toml  test.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: build-hatch.yml
.github/workflows/: build.yml  ci.yml  link_checker.yml
examples/: basic_upload.py  multiple_videos_at_once.py  private_upload.py  series_upload.py
src/cloud_function/: generate_video_params.py
src/proxy_auth_extension/: manifest.json  proxy_auth_extension.py
src/tiktok-uploader/: .config.toml.swp  __init__.py  __main__.py  auth.py  browsers.py  cli.py  config.toml  constants.py  upload.py  uploadVideo.py
src/tiktok_uploader/: __init__.py  __main__.py  auth.py  browsers.py  cli.py  config.py  config.toml  get_latest_cookies.py  types.py  upload.py  upload_meditations.py  utils.py
src/tiktok_uploader/proxy_auth_extension/: background.js  manifest.json  proxy_auth_extension.py
tests/: test_browsers.py  test_cli.py  test_client.py  test_upload.py
