[project]
name = "tiktok-uploader"
version = "1.1.4"
authors = [
  { name = "William Kaiser", email = "wkaisertexas@gmail.com" },
]
description = "An automatic TikTok video uploader w/ CLI. Uploads videos automatically using an automated browser and your cookies for authentication."
readme = "README.md"
requires-python = ">=3.8"
keywords = [
	"Selenium",
	"Automation",
	"TikTok",
  "Video",
  "Python",
  "Upload",
  "CLI",
  "Command Line",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
	"pydantic>=2.10.6",
	"pytz>=2025.2",
	"selenium>=3.141.0",
	"toml>=0.10.2",
	"webdriver-manager>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[dependency-groups]
dev = [
    "freezegun>=0.3.15",
    "mypy>=0.720",
    "pytest>=4.6.11",
    "ruff>=0.0.17",
]
types = [
    "pandas-stubs>=1.2.0.62",
    "types-pexpect>=4.8.0.1",
    "types-pygments>=2.16.0.0",
    "types-pymysql>=1.1.0.1",
    "types-python-dateutil>=2.8.19.14",
    "types-pytz>=2023.3.1.1",
    "types-requests>=2.31.0.5",
    "types-toml>=0.10.8.7",
]

[project.scripts]
tiktok-uploader = "tiktok_uploader.cli:main"
tiktok-auth = "tiktok_uploader.cli:auth"

[project.urls]
"Source Code" = "https://github.com/wkaisertexas/tiktok-uploader"
"Bug Tracker" = "https://github.com/wkaisertexas/tiktok-uploader/issues"
